--- a/static/form.html
+++ b/static/form.html
@@ -6,8 +6,7 @@
 <body>
 <div>
   <form method="POST" action="/form">     
-      <label>Name</label><input name="name" type="text" value="" />
-      <label>Address</label><input name="address" type="text" value="" />
+      <label>Stock</label><input name="Stock" type="text" value="" />
       <input type="submit" value="submit" />
   </form>
 </div>
